fix bug - wrap url in listings

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,4 +15,5 @@
 
 .listing-url{
     color: forestgreen;
+    word-wrap: break-word;
 }
